--- a/mbdyn/manual/tecman/tecman.tex
+++ b/mbdyn/manual/tecman/tecman.tex
@@ -3442,7 +3442,7 @@ Residual vector:
 	\mathrm{node1\ momentum}:\ 1-3& -= & \T F \\
 	\mathrm{node1\ angular\ momentum}:\ 4-6& -= & 
 		(\T R_1\cdot \T d_1) \times \T F \\
-	\mathrm{node2\ momentum}:\ 7-9& += & \T Fi \\
+	\mathrm{node2\ momentum}:\ 7-9& += & \T F \\
 	\mathrm{node2\ angular\ momentum}:\ 10-12& += & 
 		(\T R_2\cdot \T d_2) \times \T F \\
 	\mathrm{constraint}:\ 13-15& = &  ((\T x_1+\T R_1\cdot \T d_1) - 
