move GRAALL damper to module-damper-graall

--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -3655,16 +3655,9 @@ as observed in some fluids at intermediate Reynolds number.
 %\end{verbatim}
   
 \subsection{GRAALL damper}
-This is a very experimental constitutive law, based on a nonlinear model
-for a hydraulic damper to be used in landing gear modeling.
-Basically, it requires the user to supply the name of the GRAALL-style 
-input file with damper data.
-It will be documented as soon as it reaches an appreciable level of
-stability.
-See also the 
-\htmlref{\kw{shock absorber}}{sec:CL:SHOCK-ABSORBER}
-constitutive law.
-
+This very experimental constitutive law, based on a nonlinear model
+for a hydraulic damper to be used in landing gear modeling,
+has been moved to \texttt{module-damper-graall}.
 
 \subsection{shock absorber}\label{sec:CL:SHOCK-ABSORBER}
 This constitutive law implements a landing gear hydraulic shock absorber:
