--- a/mbdyn/manual/input/modules.tex
+++ b/mbdyn/manual/input/modules.tex
@@ -90,6 +90,19 @@ Simple example of run-time loadable user-defined constitutive law in Fortran 95.
 \noindent
 Implements various formulas of 1D continuous contact models.
 
+\subsection{Module-damper-graall}
+\emph{Author: Pierangelo Masarati, based on an original work of Gian Luca Ghiringhelli}
+
+This module implements a 1D constitutive law that models
+the behavior of a landing gear shock absorber.
+It requires the user to supply the name of the GRAALL-style 
+input file that contains the data of the damper.
+It will be documented as soon as it reaches an appreciable level
+of stability.
+See also the 
+\htmlref{\kw{shock absorber}}{sec:CL:SHOCK-ABSORBER}
+constitutive law.
+
 \subsection{Module-damper-hydraulic}
 \emph{Author: Pierangelo Masarati}
 
