--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -14,6 +14,7 @@ MBDyn 1.X-Devel
 		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added "ifndef" declaration modifier for var redefinition
 		- added module-nodedistdrive (Reinhold Resch)
+		- moved GRAALL damper to module-damper-graall
 	Backward compatibility issues:
 	Known issues:
 	Bug fixes:
