--- a/mbdyn/NEWS
+++ b/mbdyn/NEWS
@@ -9,6 +9,8 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
+* Sep 07, 2012: release of MBDyn 1.5.1
+
 * Aug 31, 2012: release of MBDyn 1.5.0
 
 * Jan 18, 2012: release of MBDyn 1.4.3
