cleanup previous commit

--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -577,7 +577,7 @@ The syntax is
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{plugin} ::= \kw{node}
     \bnt{arglist} ::= \bnt{label} , \bnt{type}
-        [ , \{ [ \kw{string=} ] \bnt{name} | \kw{index=} \bnt{index} \} ] # \kw{index} is deprecated
+        [ , \{ \kw{string=} \bnt{name} | \kw{index=} \bnt{index} \} ] # \kw{index} is deprecated
 \end{Verbatim}
 %\end{verbatim}
 where
@@ -615,7 +615,7 @@ The syntax is
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{plugin} ::= \kw{element}
     \bnt{arglist} ::= \bnt{label} , \bnt{type}
-        [ , \{ [ \kw{string=} ] \bnt{name} | \kw{index=} \bnt{index} \} ] # \kw{index} is deprecated
+        [ , \{ \kw{string=} \bnt{name} | \kw{index=} \bnt{index} \} ] # \kw{index} is deprecated
 \end{Verbatim}
 %\end{verbatim}
 where
