--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -4656,6 +4656,10 @@ Otherwise, a list of \nt{mode\_damping} values follows.
 Each occurrence of \nt{mode\_damping} is made of the mode's index
 and the related damping value.
 
+A generalized damping matrix can be provided in the database;
+it is ignored and overridden by all the above specified forms
+of damping provided in the specification of the modal joint element.
+
 
 \subsubsection{Output}
 Up to MBDyn 1.2.6 output occurred in a specific file that needed
