--- a/mbdyn/TODO
+++ b/mbdyn/TODO
@@ -262,7 +262,7 @@ E. Bugs/missing features:
 	- allow make of mod-* and moddae-* modules
 	- implement referenceable template drive callers (much like regular drive callers) (DONE)
 	- implement support for pardiso linear solver when compiled with icc
-	- check "new" distance
+	- check "new" distance joint
 	- take care of nodes with output "off" in mbdyn2easyanim.sh
 	- allow "relative" node view in EasyAnim
 	- fix "use binary" in modal joint (DONE)
