--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -12,6 +12,16 @@ Paolo Mantegazza        <mantegazza@aero.polimi.it>
 MBDyn 1.X-Devel
 	Enhancements:
 		- added screw joint (Mauro Manetti & Marco Morandini)
+	Backward compatibility issues:
+	Known issues:
+		- Schur solver is broken
+		- TotalPinJoint inverse dynamics support is broken
+		- RTAI and multithread support incompatible
+		- module-octave and multithread support incompatible
+	Bug fixes:
+
+MBDyn 1.5.3
+	Enhancements:
 		- added forces NetCDF support (Louis Gagnon)
 		- added support for modal damping matrix in modal joint db
 	Backward compatibility issues:
