--- a/mbdyn/NEWS
+++ b/mbdyn/NEWS
@@ -9,7 +9,7 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
-* Nov XX, 2012: release of MBDyn 1.5.3
+* Nov 23, 2012: release of MBDyn 1.5.3
 
 * Sep 28, 2012: release of MBDyn 1.5.2
 
